Use var keywords consistently